# DeepCrustAI

./: .gitignore  README.md  compare_generations.py  comparison_graph.py  deepcrust_pro_large_vecnormalize.pkl  evaluate_v3.py  get_demand_curve.py  main.py  plot_demand.py  pyproject.toml  record_battle.py  record_fleet.py  record_pro.py  test_trained.py  train.py  train_lager.py  train_longer.py  transfer_train.py  transfer_visible_age.py  visualize_battle.py  visualize_lazy.py  visualize_pro.py  visualize_stock.py
env/: DeepCrustEnv.py
