[project]
name = "deepcrustai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "wandb>=0.23.1",
]
